--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,3 +15,11 @@ variables:
 steps:
 - script: dotnet build --configuration $(buildConfiguration)
   displayName: 'dotnet build $(buildConfiguration)'
+
+- task: AzureRmWebAppDeployment@4
+  inputs:
+    ConnectionType: 'AzureRM'
+    azureSubscription: 'AzureCoreSamplePoject'
+    appType: 'webApp'
+    WebAppName: 'AzureDevOpsSampleCore'
+    packageForLinux: '$(System.DefaultWorkingDirectory)/**/*.zip'
