--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,4 +22,4 @@ steps:
     azureSubscription: 'AzureCoreSamplePoject'
     appType: 'webApp'
     WebAppName: 'AzureDevOpsSampleCore'
-    packageForLinux: '$(System.DefaultWorkingDirectory)/**/*.zip'
+    packageForLinux: '$(System.DefaultWorkingDirectory)/AzureCoreSamplePoject/drop/s/build'
