Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -36,4 +36,4 @@ steps:
     outputDirectory: '$(Agent.TempDirectory)/dependency-scan-results'
     scanDirectory: '$(Build.SourcesDirectory)'
     outputFormat: 'ALL'
-    useSonarQubeIntegration: true
+    useSonarQubeIntegration: false
