--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,9 +6,8 @@
 
 trigger:
 - master
-
 pool:
-  vmImage: 'ubuntu-latest'
+  vmImage: 'windows-latest'
 
 variables:
   buildConfiguration: 'Release'
@@ -16,10 +15,6 @@ variables:
 steps:
 - script: dotnet build --configuration $(buildConfiguration)
   displayName: 'dotnet build $(buildConfiguration)'
-- task: AzureRmWebAppDeployment@4
+- task: CopyFiles@2
   inputs:
-    ConnectionType: 'AzureRM'
-    azureSubscription: 'AppServicesConn'
-    appType: 'webApp'
-    WebAppName: 'AzureDevopsSampleCore'
-    packageForLinux: '$(System.DefaultWorkingDirectory)/**/*.zip'
+    targetFolder: '$(Build.ArtifactStagingDirectory)'  
