--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,6 +16,13 @@ steps:
 - script: dotnet build --configuration $(buildConfiguration)
   displayName: 'dotnet build $(buildConfiguration)'
 
+- task: AzureRmWebAppDeployment@4
+  inputs:
+    ConnectionType: 'AzureRM'
+    azureSubscription: 'AzureCoreSamplePoject'
+    appType: 'webApp'
+    WebAppName: 'AzureDevOpsSampleCore'
+    packageForLinux: '$(System.DefaultWorkingDirectory)/AzureCoreSamplePoject/drop/s/build'
 - task: PublishBuildArtifacts@1
 - task: CopyFiles@2
   inputs:
