--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,15 +15,9 @@ variables:
 steps:
 - script: dotnet build --configuration $(buildConfiguration)
   displayName: 'dotnet build $(buildConfiguration)'
-
-- task: AzureRmWebAppDeployment@4
+- task: DotNetCoreCLI@2
+  displayName: Build
   inputs:
-    ConnectionType: 'AzureRM'
-    azureSubscription: 'AppServicesConn'
-    appType: 'webApp'
-    WebAppName: 'AzureDevOpsSampleCore'
-    packageForLinux: '$(System.DefaultWorkingDirectory)/AzureCoreSamplePoject/drop/s/build'
-- task: PublishBuildArtifacts@1
-- task: CopyFiles@2
-  inputs:
-    targetFolder: '$(Build.ArtifactStagingDirectory)'  
+    command: build
+    projects: '**/*.csproj'
+    arguments: '--configuration Release' # Update this to match your need
